--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://PrakashChoure2002.github.io/personal_portfolio",
+  "homepage": "https://PrakashChoure2002.github.io/portfolio",
   "name": "one-portfolio",
   "version": "0.1.0",
   "private": true,
