--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "cross-env": "^7.0.3",
     "gh-pages": "^6.2.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
